// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/panel-android/components/content/BlockingTab.jsx Snapshot tests with react-test-renderer BlockingTab component as global with falsy props 1`] = `
<div
  className="BlockingHeader"
>
  <div
    className="BlockingHeader__text"
  >
    <h2>
      android_global_blocking_header
    </h2>
    <div
      className="DotsMenu"
    >
      <button
        aria-label="Menu"
        className="DotsMenu__button"
        onClick={[Function]}
        type="button"
      />
      <div
        className="DotsMenu__content"
      >
        <ul>
          <li>
            <button
              className="DotsMenu__item"
              onClick={[Function]}
              type="button"
            >
              blocking_block_all
            </button>
          </li>
          <li>
            <button
              className="DotsMenu__item"
              onClick={[Function]}
              type="button"
            >
              blocking_unblock_all
            </button>
          </li>
          <li>
            <button
              className="DotsMenu__item"
              onClick={[Function]}
              type="button"
            >
              android_blocking_reset
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="BlockingCategories"
  />
</div>
`;

exports[`app/panel-android/components/content/BlockingTab.jsx Snapshot tests with react-test-renderer BlockingTab component as global with tracker truthy props 1`] = `
<div
  className="BlockingHeader"
>
  <div
    className="BlockingHeader__text"
  >
    <h2>
      android_global_blocking_header
    </h2>
    <div
      className="DotsMenu"
    >
      <button
        aria-label="Menu"
        className="DotsMenu__button"
        onClick={[Function]}
        type="button"
      />
      <div
        className="DotsMenu__content"
      >
        <ul>
          <li>
            <button
              className="DotsMenu__item"
              onClick={[Function]}
              type="button"
            >
              blocking_block_all
            </button>
          </li>
          <li>
            <button
              className="DotsMenu__item"
              onClick={[Function]}
              type="button"
            >
              blocking_unblock_all
            </button>
          </li>
          <li>
            <button
              className="DotsMenu__item"
              onClick={[Function]}
              type="button"
            >
              android_blocking_reset
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="BlockingCategories"
  >
    <div
      className="BlockingCategory"
    >
      <div
        className="BlockingCategory__details flex-container"
        onClick={[Function]}
      >
        <img
          className="BlockingCategory__image"
          src="/app/images/panel-android/categories/category-image-url.svg"
        />
        <div
          className="flex-child-grow"
        >
          <h2
            className="BlockingCategory__name"
          >
            Test1
          </h2>
          <div>
            <span
              className="BlockingCategory__numTrackers"
            >
              1 blocking_category_tracker
            </span>
            <span
              className="BlockingCategory__numBlocked"
            >
              1 blocking_category_blocked
            </span>
          </div>
        </div>
        <div
          className="BlockingCategory__buttons flex-container flex-dir-column align-justify align-middle"
        >
          <div
            className="BlockingCategory--noPointer"
          >
            <div
              className="BlockingSelectButton BlockingSelectButton__blocked"
              onClick={[Function]}
            />
          </div>
          <div
            className="BlockingCategory__toggle"
          />
        </div>
      </div>
      <div
        className="BlockingCategory__list"
        style={
          Object {
            "height": 0,
          }
        }
      />
    </div>
    <div
      className="BlockingCategory"
    >
      <div
        className="BlockingCategory__details flex-container"
        onClick={[Function]}
      >
        <img
          className="BlockingCategory__image"
          src="/app/images/panel-android/categories/category-image-url-2.svg"
        />
        <div
          className="flex-child-grow"
        >
          <h2
            className="BlockingCategory__name"
          >
            Test2
          </h2>
          <div>
            <span
              className="BlockingCategory__numTrackers"
            >
              5 blocking_category_trackers
            </span>
            <span
              className="BlockingCategory__numBlocked"
            >
              3 blocking_category_blocked
            </span>
          </div>
        </div>
        <div
          className="BlockingCategory__buttons flex-container flex-dir-column align-justify align-middle"
        >
          <div
            className="BlockingCategory--noPointer"
          >
            <div
              className="BlockingSelectButton BlockingSelectButton__mixed"
              onClick={[Function]}
            />
          </div>
          <div
            className="BlockingCategory__toggle"
          />
        </div>
      </div>
      <div
        className="BlockingCategory__list"
        style={
          Object {
            "height": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`app/panel-android/components/content/BlockingTab.jsx Snapshot tests with react-test-renderer BlockingTab component as site with falsy props 1`] = `
<div
  className="BlockingHeader"
>
  <div
    className="BlockingHeader__text"
  >
    <h2>
      android_site_blocking_header
    </h2>
    <div
      className="DotsMenu"
    >
      <button
        aria-label="Menu"
        className="DotsMenu__button"
        onClick={[Function]}
        type="button"
      />
      <div
        className="DotsMenu__content"
      >
        <ul>
          <li>
            <button
              className="DotsMenu__item"
              onClick={[Function]}
              type="button"
            >
              blocking_block_all
            </button>
          </li>
          <li>
            <button
              className="DotsMenu__item"
              onClick={[Function]}
              type="button"
            >
              blocking_unblock_all
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="BlockingCategories"
  />
</div>
`;

exports[`app/panel-android/components/content/BlockingTab.jsx Snapshot tests with react-test-renderer BlockingTab component as site with tracker falsy props 1`] = `
<div
  className="BlockingHeader"
>
  <div
    className="BlockingHeader__text"
  >
    <h2>
      android_site_blocking_header
    </h2>
    <div
      className="DotsMenu"
    >
      <button
        aria-label="Menu"
        className="DotsMenu__button"
        onClick={[Function]}
        type="button"
      />
      <div
        className="DotsMenu__content"
      >
        <ul>
          <li>
            <button
              className="DotsMenu__item"
              onClick={[Function]}
              type="button"
            >
              blocking_block_all
            </button>
          </li>
          <li>
            <button
              className="DotsMenu__item"
              onClick={[Function]}
              type="button"
            >
              blocking_unblock_all
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="BlockingCategories"
  >
    <div
      className="BlockingCategory"
    >
      <div
        className="BlockingCategory__details flex-container"
        onClick={[Function]}
      >
        <img
          className="BlockingCategory__image"
          src="/app/images/panel-android/categories/category-image-url.svg"
        />
        <div
          className="flex-child-grow"
        >
          <h2
            className="BlockingCategory__name"
          >
            Test1
          </h2>
          <div>
            <span
              className="BlockingCategory__numTrackers"
            >
              1 blocking_category_tracker
            </span>
            <span
              className="BlockingCategory__numBlocked"
            >
              1 blocking_category_blocked
            </span>
          </div>
        </div>
        <div
          className="BlockingCategory__buttons flex-container flex-dir-column align-justify align-middle"
        >
          <div
            className="BlockingCategory--noPointer"
          >
            <div
              className="BlockingSelectButton BlockingSelectButton__trusted"
              onClick={[Function]}
            />
          </div>
          <div
            className="BlockingCategory__toggle"
          />
        </div>
      </div>
      <div
        className="BlockingCategory__list"
        style={
          Object {
            "height": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;
